# syclRaytracer

./: .gitignore  CMakeLists.txt  README.md  Test.cpp  build.sh  configure.sh  run.sh
include/: BVH.cpp  BVH.hpp  Bounds3.hpp  Camera.hpp  DiffuseMaterial.hpp  Geometry.hpp  Material.hpp  OBJ_Loader.hpp  OBJ_Loader_embree.hpp  Object.hpp  Scene.hpp  Scene1.hpp  Triangle.hpp  Vec.hpp  common.hpp
src/: BVH.cpp  CMakeLists.txt  Test.cpp  embreeTest.cpp
