cmake_minimum_required(VERSION 3.22.1)
PROJECT(rayTracelib)


# Find the MKL package
#FIND_PACKAGE(MKL REQUIRED)

INCLUDE_DIRECTORIES(../include)
AUX_SOURCE_DIRECTORY(./ SRC_LIST)
ADD_LIBRARY(rayTracelib SHARED ${SRC_LIST})
#TARGET_INCLUDE_DIRECTORIES(rayTracelib PUBLIC ${MKL_INCLUDE_DIRS})
#TARGET_LINK_LIBRARIES(rayTracelib PUBLIC ${MKL_LIBRARIES})